# simpleHttpReloadServer

./: .aspell.pws  .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
cphttp/: __init__.py  cphttp.py  fileResponsePatch.py  fsWatcher.py  reloader.py
details/: index.html
docs/: README.md  details.md
scripts/: installEditableCphttpCommand
search/: search_index.json
